--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   --title-text-color: #212121;
   --accent-text-color: #2196f3;
   --second-accent-text-color: #ffffff;
-  --primary-bg-color: #ffffff;
+  /*--primary-bg-color: #ffffff;*/
   --accent-bg-color: #f5f4fa;
   --buttons-bg-color: #2196f3;
   --second-bg-color: #2f303a;
@@ -14,7 +14,7 @@
 
 body {
   color: var(--primary-text-color);
-  background-color: var(--primary-bg-color);
+  background-color: var(--second-accent-text-color);
   font-family: Roboto, sans-serif;
 }
 .list {
@@ -142,6 +142,11 @@ body {
   line-height: 1, 63;
   text-align: center;
   letter-spacing: 0.03em;
+}
+.button.secondary:hover,
+.button.secondary:focus {
+  background-color: var(--accent-text-color);
+  color: var(--second-accent-text-color);
 }
 .section-title,
 .team-title {
